contact main icon

--- a/profile.html
+++ b/profile.html
@@ -1103,42 +1103,43 @@
                 </div>
                 <div class="row">
                   <div class="col-sm-3">
-                    <div class="card-icons">
+                    <div class="card-icons main-icon__images">
                       <table>
                         <tbody>
                           <tr>
-                                          <td><i class="icon-burg" data-icon-item="icon-burg"></i></td>
-                                          <td><i class="icon-more" data-icon-item="icon-more"></i></td>
-                                          <td><i class="icon-close" data-icon-item="icon-close"></i></td>
-                                          <td><i class="icon-search" data-icon-item="icon-search"></i></td>
+                                          <td><i class="main-icon__img icon-burg" data-icon="icon-burg" data-icon-item></i></td>
+                                          <td><i class="main-icon__img icon-more" data-icon="icon-more" data-icon-item></i></td>
+                                          <td><i class="main-icon__img icon-close" data-icon="icon-close" data-icon-item></i></td>
+                                          <td><i class="main-icon__img icon-search" data-icon="icon-search" data-icon-item></i></td>
                           </tr>
                           <tr>
-                                          <td><i class="icon-shop_cart" data-icon-item="icon-shop_cart"></i></td>
-                                          <td><i class="icon-filters" data-icon-item="icon-filters"></i></td>
-                                          <td><i class="icon-like" data-icon-item="icon-like"></i></td>
-                                          <td><i class="icon-fire" data-icon-item="icon-fire"></i></td>
+                                          <td><i class="main-icon__img icon-shop_cart" data-icon="icon-shop_cart" data-icon-item></i></td>
+                                          <td><i class="main-icon__img icon-filters" data-icon="icon-filters" data-icon-item></i></td>
+                                          <td><i class="main-icon__img icon-like" data-icon="icon-like" data-icon-item></i></td>
+                                          <td><i class="main-icon__img icon-fire-2" data-icon="icon-fire-2" data-icon-item></i></td>
                           </tr>
                           <tr>
-                                          <td><i class="icon-see" data-icon-item="icon-see"></i></td>
-                                          <td><i class="icon-heart" data-icon-item="icon-heart"></i></td>
-                                          <td><i class="icon-mark" data-icon-item="icon-mark"></i></td>
-                                          <td><i class="icon-symbol" data-icon-item="icon-symbol"></i></td>
+                                          <td><i class="main-icon__img icon-see" data-icon="icon-see" data-icon-item></i></td>
+                                          <td><i class="main-icon__img icon-heart" data-icon="icon-heart" data-icon-item></i></td>
+                                          <td><i class="main-icon__img icon-mark" data-icon="icon-mark" data-icon-item></i></td>
+                                          <td><i class="main-icon__img icon-symbol" data-icon="icon-symbol" data-icon-item></i></td>
                           </tr>
                         </tbody>
                       </table>
                     </div>
                   </div>
                   <div class="col-sm-9">
-                                  <div class="card card-links margin-bottom-0 padding-bottom-xl-30">
+                                  <div class="card card-links main-icon__card margin-bottom-0 padding-bottom-xl-30">
                                     <div class="card-links-wrap">
                                       <div class="card-links__img">
-                                        <div class="card-links__imgbox"><i class="icon-heart" data-icon="icon-heart"></i></div>
+                                        <div class="card-links__imgbox main-icon__imgbox"><i class="main-icon__img icon-heart" data-icon="icon-heart"></i></div>
                                       </div>
-                                      <div class="card-links__items">
-                                        <div class="card-links__item card-links__lnkbox card-links__head">
+                                      <div class="card-links__items main-icon__items">
+                                        <div class="card-links__item card-links__lnkbox card-links__head main-icon__item">
                                           <div class="card-links__left">
                                             <button class="card-links__lnk main-icon__title" type="button" data-edit="true" data-target="#mainIconsTitle-01">Моя любимая пиццерия</button>
-                                            <input class="form__input main-icon__input hide" name="title" maxlength="24">
+                                            <input class="form__input main-icon__input margin-bottom-10 current hide" name="title" maxlength="24" placeholder="Название системы">
+                                            <input class="form__input main-icon__input hide" name="title" placeholder="Введите ссылку">
                                           </div>
                                           <div class="card-links__right">
                                             <button class="card-links__lnk card-links__lnk_small link-special color-thin main-icon__button" type="button" data-edit>Редактировать</button>
@@ -1150,16 +1151,17 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="card card-links margin-bottom-0 padding-bottom-xl-30">
+                                  <div class="card card-links main-icon__card margin-bottom-0 padding-bottom-xl-30">
                                     <div class="card-links-wrap">
                                       <div class="card-links__img">
-                                        <div class="card-links__imgbox"><i class="icon-fire-2" data-icon="icon-fire-2"></i></div>
+                                        <div class="card-links__imgbox main-icon__imgbox"><i class="main-icon__img icon-fire-2" data-icon="icon-fire-2"></i></div>
                                       </div>
-                                      <div class="card-links__items">
-                                        <div class="card-links__item card-links__lnkbox card-links__head">
+                                      <div class="card-links__items main-icon__items">
+                                        <div class="card-links__item card-links__lnkbox card-links__head main-icon__item">
                                           <div class="card-links__left">
                                             <button class="card-links__lnk main-icon__title" type="button" data-edit="true" data-target="#mainIconsTitle-02">Сайт важного партнера</button>
-                                            <input class="form__input main-icon__input hide" name="title" maxlength="24">
+                                            <input class="form__input main-icon__input margin-bottom-10 current hide" name="title" maxlength="24" placeholder="Название системы">
+                                            <input class="form__input main-icon__input hide" name="title" placeholder="Введите ссылку">
                                           </div>
                                           <div class="card-links__right">
                                             <button class="card-links__lnk card-links__lnk_small link-special color-thin main-icon__button" type="button" data-edit>Редактировать</button>
@@ -1171,16 +1173,17 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="card card-links margin-bottom-0 padding-bottom-xl-30">
+                                  <div class="card card-links main-icon__card margin-bottom-0 padding-bottom-xl-30">
                                     <div class="card-links-wrap">
                                       <div class="card-links__img">
-                                        <div class="card-links__imgbox"><i class="icon-aircraft" data-icon="icon-aircraft"></i></div>
+                                        <div class="card-links__imgbox main-icon__imgbox"><i class="main-icon__img icon-aircraft" data-icon="icon-aircraft"></i></div>
                                       </div>
-                                      <div class="card-links__items">
-                                        <div class="card-links__item card-links__lnkbox card-links__head">
+                                      <div class="card-links__items main-icon__items">
+                                        <div class="card-links__item card-links__lnkbox card-links__head main-icon__item">
                                           <div class="card-links__left">
                                             <button class="card-links__lnk main-icon__title" type="button" data-edit="true" data-target="#mainIconsTitle-03">Моя любимая пиццерия</button>
-                                            <input class="form__input main-icon__input hide" name="title" maxlength="24">
+                                            <input class="form__input main-icon__input margin-bottom-10 current hide" name="title" maxlength="24" placeholder="Название системы">
+                                            <input class="form__input main-icon__input hide" name="title" placeholder="Введите ссылку">
                                           </div>
                                           <div class="card-links__right">
                                             <button class="card-links__lnk card-links__lnk_small link-special color-thin main-icon__button" type="button" data-edit>Редактировать</button>
@@ -1192,16 +1195,17 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="card card-links margin-bottom-0 padding-bottom-xl-30">
+                                  <div class="card card-links main-icon__card margin-bottom-0 padding-bottom-xl-30">
                                     <div class="card-links-wrap">
                                       <div class="card-links__img">
-                                        <div class="card-links__imgbox"><i class="icon-shop_cart" data-icon="icon-shop_cart"></i></div>
+                                        <div class="card-links__imgbox main-icon__imgbox"><i class="main-icon__img icon-shop_cart" data-icon="icon-shop_cart"></i></div>
                                       </div>
-                                      <div class="card-links__items">
-                                        <div class="card-links__item card-links__lnkbox card-links__head">
+                                      <div class="card-links__items main-icon__items">
+                                        <div class="card-links__item card-links__lnkbox card-links__head main-icon__item">
                                           <div class="card-links__left">
                                             <button class="card-links__lnk main-icon__title" type="button" data-edit="true" data-target="#mainIconsTitle-04">Моя любимая пиццерия</button>
-                                            <input class="form__input main-icon__input hide" name="title" maxlength="24">
+                                            <input class="form__input main-icon__input margin-bottom-10 current hide" name="title" maxlength="24" placeholder="Название системы">
+                                            <input class="form__input main-icon__input hide" name="title" placeholder="Введите ссылку">
                                           </div>
                                           <div class="card-links__right">
                                             <button class="card-links__lnk card-links__lnk_small link-special color-thin main-icon__button" type="button" data-edit>Редактировать</button>
@@ -1213,9 +1217,9 @@
                                       </div>
                                     </div>
                                   </div>
-                    <div class="card text-right">
-                      <button class="button button-border button-width-142 margin-right-30 button-height-30" type="button">Добавить</button>
-                      <button class="button button-border button-width-142 button-height-30" type="submit">Применить</button>
+                    <div class="card text-right margin-bottom-0 bg-color-light main-icon__buttons">
+                      <button class="button button-border button-width-142 margin-right-30 button-height-30 main-icon__button_primary" type="button" data-add>Добавить</button>
+                      <button class="button button-border button-width-142 button-height-30 main-icon__button_primary" type="submit">Применить</button>
                     </div>
                   </div>
                 </div>
