main icon profile

--- a/profile.html
+++ b/profile.html
@@ -1137,9 +1137,13 @@
                                       <div class="card-links__items main-icon__items">
                                         <div class="card-links__item card-links__lnkbox card-links__head main-icon__item">
                                           <div class="card-links__left">
-                                            <button class="card-links__lnk main-icon__title" type="button" data-edit="true" data-target="#mainIconsTitle-01">Моя любимая пиццерия</button>
-                                            <input class="form__input main-icon__input margin-bottom-10 current hide" name="title" maxlength="24" placeholder="Название системы">
-                                            <input class="form__input main-icon__input hide" name="title" placeholder="Введите ссылку">
+                                            <button class="card-links__lnk main-icon__title" type="button" data-edit="true">Моя любимая пиццерия</button>
+                                            <div class="main-icon__inputs hide">
+                                              <label class="form-label margin-bottom-5 font-size-14" for="mainIconInputTitle-1">Название</label>
+                                              <input class="form__input main-icon__input margin-bottom-15 current" id="mainIconInputTitle-1" name="title" maxlength="24" placeholder="Название системы">
+                                              <label class="form-label margin-bottom-5 font-size-14" for="mainIconInputLink-1">Ссылка</label>
+                                              <input class="form__input main-icon__input margin-bottom-5" id="mainIconInputLink-1" name="title" placeholder="Введите ссылку">
+                                            </div>
                                           </div>
                                           <div class="card-links__right">
                                             <button class="card-links__lnk card-links__lnk_small link-special color-thin main-icon__button" type="button" data-edit>Редактировать</button>
@@ -1159,9 +1163,13 @@
                                       <div class="card-links__items main-icon__items">
                                         <div class="card-links__item card-links__lnkbox card-links__head main-icon__item">
                                           <div class="card-links__left">
-                                            <button class="card-links__lnk main-icon__title" type="button" data-edit="true" data-target="#mainIconsTitle-02">Сайт важного партнера</button>
-                                            <input class="form__input main-icon__input margin-bottom-10 current hide" name="title" maxlength="24" placeholder="Название системы">
-                                            <input class="form__input main-icon__input hide" name="title" placeholder="Введите ссылку">
+                                            <button class="card-links__lnk main-icon__title" type="button" data-edit="true">Сайт важного партнера</button>
+                                            <div class="main-icon__inputs hide">
+                                              <label class="form-label margin-bottom-5 font-size-14" for="mainIconInputTitle-2">Название</label>
+                                              <input class="form__input main-icon__input margin-bottom-15 current" id="mainIconInputTitle-2" name="title" maxlength="24" placeholder="Название системы">
+                                              <label class="form-label margin-bottom-5 font-size-14" for="mainIconInputLink-2">Ссылка</label>
+                                              <input class="form__input main-icon__input margin-bottom-5" id="mainIconInputLink-2" name="title" placeholder="Введите ссылку">
+                                            </div>
                                           </div>
                                           <div class="card-links__right">
                                             <button class="card-links__lnk card-links__lnk_small link-special color-thin main-icon__button" type="button" data-edit>Редактировать</button>
@@ -1181,9 +1189,13 @@
                                       <div class="card-links__items main-icon__items">
                                         <div class="card-links__item card-links__lnkbox card-links__head main-icon__item">
                                           <div class="card-links__left">
-                                            <button class="card-links__lnk main-icon__title" type="button" data-edit="true" data-target="#mainIconsTitle-03">Моя любимая пиццерия</button>
-                                            <input class="form__input main-icon__input margin-bottom-10 current hide" name="title" maxlength="24" placeholder="Название системы">
-                                            <input class="form__input main-icon__input hide" name="title" placeholder="Введите ссылку">
+                                            <button class="card-links__lnk main-icon__title" type="button" data-edit="true">Моя любимая пиццерия</button>
+                                            <div class="main-icon__inputs hide">
+                                              <label class="form-label margin-bottom-5 font-size-14" for="mainIconInputTitle-3">Название</label>
+                                              <input class="form__input main-icon__input margin-bottom-15 current" id="mainIconInputTitle-3" name="title" maxlength="24" placeholder="Название системы">
+                                              <label class="form-label margin-bottom-5 font-size-14" for="mainIconInputLink-3">Ссылка</label>
+                                              <input class="form__input main-icon__input margin-bottom-5" id="mainIconInputLink-3" name="title" placeholder="Введите ссылку">
+                                            </div>
                                           </div>
                                           <div class="card-links__right">
                                             <button class="card-links__lnk card-links__lnk_small link-special color-thin main-icon__button" type="button" data-edit>Редактировать</button>
@@ -1203,9 +1215,13 @@
                                       <div class="card-links__items main-icon__items">
                                         <div class="card-links__item card-links__lnkbox card-links__head main-icon__item">
                                           <div class="card-links__left">
-                                            <button class="card-links__lnk main-icon__title" type="button" data-edit="true" data-target="#mainIconsTitle-04">Моя любимая пиццерия</button>
-                                            <input class="form__input main-icon__input margin-bottom-10 current hide" name="title" maxlength="24" placeholder="Название системы">
-                                            <input class="form__input main-icon__input hide" name="title" placeholder="Введите ссылку">
+                                            <button class="card-links__lnk main-icon__title" type="button" data-edit="true">Моя любимая пиццерия</button>
+                                            <div class="main-icon__inputs hide">
+                                              <label class="form-label margin-bottom-5 font-size-14" for="mainIconInputTitle-4">Название</label>
+                                              <input class="form__input main-icon__input margin-bottom-15 current" id="mainIconInputTitle-4" name="title" maxlength="24" placeholder="Название системы">
+                                              <label class="form-label margin-bottom-5 font-size-14" for="mainIconInputLink-4">Ссылка</label>
+                                              <input class="form__input main-icon__input margin-bottom-5" id="mainIconInputLink-4" name="title" placeholder="Введите ссылку">
+                                            </div>
                                           </div>
                                           <div class="card-links__right">
                                             <button class="card-links__lnk card-links__lnk_small link-special color-thin main-icon__button" type="button" data-edit>Редактировать</button>
