--- a/post.html
+++ b/post.html
@@ -1044,7 +1044,7 @@
                         </div>
                         <div class="comment__date"><span>12 Декабря 2018, 16:32</span></div>
                         <div class="comment__text">
-                          <p>Параллельно с пуско-наладкой оборудования специалисты фирмы Venjakob провели теоретическое и практическое обучение работе с установкой для сотрудников ВМЗ.</p>
+                          <p>ЮЛИЯ ШХИЯНЦ, Параллельно с пуско-наладкой оборудования специалисты фирмы Venjakob провели теоретическое и практическое обучение работе с установкой для сотрудников ВМЗ.</p>
                         </div>
                         <div class="comment__link">
                           <button class="comment__reply">Ответить</button>
@@ -1066,7 +1066,7 @@
                           </div>
                           <div class="comment__date"><span>12 Декабря 2018, 16:32</span></div>
                           <div class="comment__text">
-                            <p>Мы стремимся к тому, чтобы работа в ОМК помогала сотрудникам компании реализовывать свой потенциал и раскрывать свои способности Активно развиваясь, Компания делает реальными перспективы профессионального и карьерного роста. Для обеспечения взаимовыгодного партнерства и соблюдения трудовых прав мы активно поддерживаем и развиваем социальный диалог с сотрудниками и их представителями. Читать подробнее о работе с персоналом. </p>
+                            <p>ПЕТР ТУШИН, Мы стремимся к тому, чтобы работа в ОМК помогала сотрудникам компании реализовывать свой потенциал и раскрывать свои способности Активно развиваясь, Компания делает реальными перспективы профессионального и карьерного роста. Для обеспечения взаимовыгодного партнерства и соблюдения трудовых прав мы активно поддерживаем и развиваем социальный диалог с сотрудниками и их представителями. Читать подробнее о работе с персоналом.</p>
                             <p>Мы разработали специальную форму − Приложение к договору «Требование о соблюдении законодательства в области охраны труда, промышленной, пожарной безопасности, охраны окружающей среды». Подписывая его, подрядчик обязуется следовать процедурам, правилам и инструкциям ОМК в области охраны труда, промышленной, экологической и экономической безопасности с целью исключения или минимизации возможного ущерба, наносимого окружающей среде, здоровью сотрудников ОМК, посетителей и третьих лиц.</p>
                           </div>
                           <div class="comment__link">
